--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "deploy": "yarn build && npx thirdweb@latest upload dist"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/sdk": "^3",
+    "ethers": "^5.7.2",
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-router-dom": "^7.4.1",
-    "thirdweb": "^5"
+    "thirdweb": "^5.94.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
